[project]
name = "tmuxp"
version = "1.67.0"
description = "Session manager for tmux, which allows users to save and load tmux sessions through simple configuration files."
requires-python = ">=3.10,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Utilities",
  "Topic :: System :: Shells",
]
keywords = ["tmux", "session manager", "terminal", "ncurses"]
homepage = "http://github.com/tmux-python/tmuxp/"
readme = "README.md"
packages = [
  { include = "*", from = "src" },
]
include = [
  { path = "CHANGES", format = "sdist" },
  { path = ".tmuxp.yaml", format = "sdist" },
  { path = "tests", format = "sdist" },
  { path = "examples", format = "sdist" },
  { path = "docs", format = "sdist" },
  { path = "conftest.py", format = "sdist" },
]
dependencies = [
  "libtmux~=0.55.0",
  "PyYAML>=6.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/tmux-python/tmuxp/issues"
Documentation = "https://tmuxp.git-pull.com"
Repository = "https://github.com/tmux-python/tmuxp"
Changes = "https://github.com/tmux-python/tmuxp/blob/master/CHANGES"

[project.scripts]
tmuxp = 'tmuxp:cli.cli'

[dependency-groups]
dev = [
  # Docs
  "aafigure",  # https://launchpad.net/aafigure
  "pillow",  # https://pillow.readthedocs.io/
  "gp-sphinx==0.0.1a12",  # https://gp-sphinx.git-pull.com/
  "sphinx-autodoc-argparse==0.0.1a12",  # https://gp-sphinx.git-pull.com/
  "sphinx-autodoc-api-style==0.0.1a12",
  "gp-libs",  # https://gp-libs.git-pull.com/
  "sphinx-autobuild",  # https://sphinx-extensions.readthedocs.io/en/latest/sphinx-autobuild.html
  # Testing
  "gp-libs",
  "pytest",
  "pytest-rerunfailures",
  "pytest-mock",
  "pytest-watcher",
  # Coverage
  "codecov",
  "coverage",
  "pytest-cov",
  # Lint
  "ruff",
  "mypy",
  "types-docutils",
  "types-Pygments",
  "types-PyYAML",
]

docs = [
  "aafigure",  # https://launchpad.net/aafigure
  "pillow",  # https://pillow.readthedocs.io/
  "gp-sphinx==0.0.1a12",  # https://gp-sphinx.git-pull.com/
  "sphinx-autodoc-argparse==0.0.1a12",  # https://gp-sphinx.git-pull.com/
  "sphinx-autodoc-api-style==0.0.1a12",
  "gp-libs",  # https://gp-libs.git-pull.com/
  "sphinx-autobuild",  # https://sphinx-extensions.readthedocs.io/en/latest/sphinx-autobuild.html
]
testing = [
  "gp-libs",
  "pytest",
  "pytest-rerunfailures",
  "pytest-mock",
  "pytest-watcher",
]
coverage =[
  "codecov",
  "coverage",
  "pytest-cov",
]
lint = [
  "ruff",
  "mypy",
  "types-docutils",
  "types-Pygments",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Editable pin to the local libtmux-protocol-engines worktree so we
# can benchmark and validate every protocol engine — including the
# pipelined ``Server.batch()`` API tmuxp's workspace builder uses for
# bulk option dispatch — against tmuxp's full test suite.
libtmux = { path = "../libtmux-protocol-engines", editable = true }

[tool.uv.exclude-newer-package]
# git-pull packages release in lockstep with their workspaces, so a
# fresh release blocking on the 3-day cooldown blocks every
# contributor's `uv sync` until it clears. `false` exempts each
# from any `exclude-newer` constraint (global or per-user) without
# committing a date that would age into the lockfile. Mirrors the
# pattern at vcspull/pyproject.toml for libvcs.
gp-libs = false
gp-sphinx = false
sphinx-autodoc-api-style = false
sphinx-autodoc-argparse = false
sphinx-autodoc-docutils = false
sphinx-autodoc-fastmcp = false
sphinx-autodoc-pytest-fixtures = false
sphinx-autodoc-sphinx = false
sphinx-autodoc-typehints-gp = false
sphinx-fonts = false
sphinx-gp-opengraph = false
sphinx-gp-sitemap = false
sphinx-gp-theme = false
sphinx-ux-autodoc-layout = false
sphinx-ux-badges = false

[tool.coverage.run]
branch = true
source = [
  "tmuxp",
]
omit = [
  "tests/*",
  "*/_vendor/*",
  "*/_*",
  "pkg/*",
  "*/log.py",
  "docs/_ext/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "def parse_args",
  "from __future__ import annotations",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = [
  "src/",
  "tests/",
]
enable_incomplete_feature = []

[[tool.mypy.overrides]]
module = [
  "shtab",
  "IPython.*",
  "ptpython.*",
  "prompt_toolkit.*",
  "bpython",
  "aafigure",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
  "FA100",  # future annotations
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]
extend-safe-fixes = [
  "UP006",
  "UP007",
]
pyupgrade.keep-runtime-typing = false

[tool.ruff.lint.isort]
known-first-party = [
  "tmuxp",
]
combine-as-imports = true
required-imports = [
  "from __future__ import annotations",
]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = [
  "types",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"src/tmuxp/workspace/finders.py" = ["PTH"]
"src/tmuxp/cli/*.py" = ["PTH"]
"docs/_ext/aafig.py" = ["PTH"]

[tool.pytest.ini_options]
addopts = "--reruns=0 --tb=short --no-header --showlocals --doctest-modules"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = [
  "src/tmuxp",
  "tests",
  "docs",
]
filterwarnings = [
  "ignore:The frontend.Option(Parser)? class.*:DeprecationWarning::",
  "ignore:.*invalid escape sequence.*:SyntaxWarning:.*aafigure.*:",
]
