[tool.poetry]
name = "tmuxp_test_plugin_awf"
version = "0.0.2"
description = "A tmuxp plugin to test after_window_finished part of the tmuxp plugin system"
authors = ["Joseph Flinn <joseph.s.flinn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tmuxp = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
