[tool.poetry]
name = "tmuxp_test_plugin_bwb"
version = "0.0.2"
description = "A tmuxp plugin to test before_workspace_build part of the tmuxp plugin system"
authors = ["Joseph Flinn <joseph.s.flinn@gmail.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
tmuxp = "1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
