[tool.poetry]
name = "tmuxp_test_plugin_fail"
version = "0.1.0"
description = "A test plugin designed to fail to test the cli"
authors = ["Joseph Flinn <joseph.s.flinn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tmuxp = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
