[project]
name = "tmuxp_test_plugin_fail"
version = "0.1.0"
description = "A test plugin designed to fail to test the cli"
authors = [
  {name = "Joseph Flinn", email = "joseph.s.flinn@gmail.com"}
]
requires-python = ">=3.8,<4.0"
dependencies = [
  "tmuxp>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
