[project]
name = "tmuxp_test_plugin_owc"
version = "0.0.2"
description = "A tmuxp plugin to test on_window_create part of the tmuxp plugin system"
authors = [
  {name = "Joseph Flinn", email = "joseph.s.flinn@gmail.com"}
]
requires-python = ">=3.8,<4.0"
dependencies = [
  "tmuxp>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
